<resources>
    <string name="app_name">Softagi</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_new_account">Create new account</string>
    <string name="already_a_member_sign_in">Already a member, Sign in</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="new_user_create_account">New User Create Account</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
</resources>